# AITrainer

./: .gitignore  replacements.txt
backend/: CMakeLists.txt  README  main.cpp
backend/config/: config.json
backend/controllers/: HealthController.cc  HealthController.h  InferController.cc  InferController.h
backend/controllers/AIController/: AIController.cc  AIController.h
backend/controllers/HealthController/: HealthController.cc  HealthController.h
backend/services/: AiService.cc  AiService.h
backend/services/HealthService/: HealthService.cc  HealthService.h
backend/services/HuggingFaceService/: HuggingFaceService.cc  HuggingFaceService.h
client/: CMakeLists.txt  icons.qrc
client/AITrainer/: .gitignore  main.cpp
client/AITrainer/Core/AIModelManager/: AIModelManager.cpp
client/AITrainer/UI/Components/: HeightWeight.h
client/AITrainer/UI/Components/EatingType/: EatingType.h
client/AITrainer/UI/Components/Gender/: Gender.h
client/AITrainer/UI/Components/HeightAndWeight/: HeightAndWeight.cpp  HeightAndWeight.h
client/AITrainer/UI/Components/NavBar/: NavBar.cpp  NavBar.h
client/AITrainer/UI/Components/PrSettingUp/: PrSettingUp.cpp  PrSettingUp.h
client/AITrainer/UI/Components/StepPage/: StepPage.h
client/AITrainer/UI/Components/TrainingFormat/: TrainingFormat.h
client/AITrainer/UI/Components/TrainingFrequency/: TrainingFrequency.cpp  TrainingFrequency.h
client/AITrainer/UI/MainWindow/: MainWindow.cpp  MainWindow.h
client/AITrainer/UnitTests/AIResponseTest/: AIResponseTest.h
client/Core/AIModelManager/: AIModelManager.cpp  AIModelManager.h
client/UI/Components/Age/: Age.cpp  Age.h
client/UI/Components/Aim/: Aim.cpp  Aim.h
client/UI/Components/ClickableWidget/: ClickableWidget.cpp  ClickableWidget.h
client/UI/Components/EatingType/: EatingType.cpp
client/UI/Components/Gender/: Gender.cpp
client/UI/Components/Header/: Header.cpp  Header.h
client/UI/Components/NavBarItem/: NavBarItem.cpp  NavBarItem.h
client/UI/Components/StepPage/: StepPage.cpp
client/UI/Components/TrainingFormat/: TrainingFormat.cpp
client/UI/Components/Weigh/: Weigh.cpp  Weigh.h
client/UnitTests/AIResponseTest/: AIResponseTest.cpp
